--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
   "extends": ["airbnb-base", "prettier"],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": ["error"]
+    "prettier/prettier": ["error"],
+    "no-underscore-dangle": "off"
   },
   "env": {
     "commonjs": true,
