--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "pretty-quick": "^3.0.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.11.2"
+    "@babel/runtime": "^7.11.2",
+    "aws-sdk": "^2.738.0"
   },
   "targets": {
     "main": {
