Setup dynamodb in jest

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "npm run clean && npm run bundle",
     "lint": "eslint src --ext .js",
     "test": "jest",
-    "test:watch": "jest --watchAll",
+    "test:watch": "DEBUG='jest:*' jest --watchAll",
     "coverage": "jest --coverage",
     "bundle": "parcel build src/index.js"
   },
@@ -27,6 +27,8 @@
     "@types/jest": "^26.0.10",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.3.0",
+    "debug": "^4.1.1",
+    "dynamodb-local": "0.0.31",
     "eslint": "^7.7.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
