--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@types/jest": "^26.0.10",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.3.0",
-    "debug": "^4.1.1",
     "dynamodb-local": "0.0.31",
     "eslint": "^7.7.0",
     "eslint-config-airbnb-base": "^14.2.0",
@@ -50,7 +49,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.11.2",
-    "aws-sdk": "^2.738.0"
+    "aws-sdk": "^2.738.0",
+    "debug": "^4.1.1"
   },
   "targets": {
     "main": {
