--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.8.4",
   "description": "Lightweight DynamoDB ODM",
   "main": "dist/ddb.js",
+  "types": "types/index.d.ts",
   "scripts": {
     "bundle": "webpack",
     "clean": "rm -fR dist",
