--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -23,6 +23,11 @@ jobs:
       - run: npm ci
       - run: npm run lint
       - run: npm run coverage
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       - uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
