--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-sonarjs": "^0.5.0",
     "husky": "^4.2.5",
     "jest": "^26.4.1",
+    "jest-sonar-reporter": "^2.0.0",
     "lint-staged": "^10.2.11",
     "prettier": "^2.0.5",
     "pretty-quick": "^3.0.0",
