--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.organization=kdcsoftware
 sonar.projectKey=kdcsoftware_ddb
 
-sonar.sources=.
+sonar.sources=./src
 sonar.exclusions=**/tests/*.js
 sonar.language=js
 sonar.tests=./tests
