--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.organization=kdcsoftware
-sonar.projectKey=kdcsoftware_ddb
+sonar.organization=kdcio
+sonar.projectKey=kdcio_ddb
 
 sonar.sources=./src
 sonar.exclusions=**/tests/*.js
