--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -3,14 +3,20 @@ name: build
 on:
   push:
     branches: [master]
+    paths-ignore:
+      - '**/README.md'
   pull_request:
     branches: [master]
+    paths-ignore:
+      - '**/README.md'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
